--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,23 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Eli's Blog"
+author: "Eli Hatamov"
+description: "Blog about my personal projects." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "eli89h@gmail.com"
+#twitter_username: "twitteruser"
+#github_username: "githubuser"
+linkedin_username: "eli89h"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
 #pinterest_username: username
 #youtube_username: username
 #googleplus_username: +username
+
+# Blog settings
+show_excerpts: true
+paginate: 5
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
@@ -23,12 +27,15 @@ theme: "minima"
 rss: rss
 
 kramdown:
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
-    disable: true
+    block:
+      line_numbers: false
     
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-paginate
 
 titles_from_headings:
   strip_title: true
@@ -40,3 +47,7 @@ defaults:
       type: post
     values:
       tags: Other
+
+timezone: Asia/Jerusalem
+
+future: true
